js/js.translator/testData/incremental/invalidation/typeScriptExportSurfaceUpdatesPerFile/lib2/l2.3.kt
@JsExport
fun bar(name: String): String = name.reversed()
